infra/k8s/comments-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments 
  template:
    metadata:
      labels:
        app: comments 
    spec:
      containers:
      - name: comments 
        image: jpmmatias/comments 
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv 
spec:
  type: ClusterIP
  selector:
    app: comments 
  ports:
  - name: comments
    protocol: TCP
    port: 4001 
    targetPort: 4001
